--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc-config": "tsc --init",
+    "watch": "tsc -w & nodemon -q -w dist dist/server.js",
+    "build": "tsc",
+    "start": "nodemon dist/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "firebase-admin": "^11.4.0",
+    "mongoose": "^6.8.1",
     "typescript": "^4.9.4"
   }
 }
